--- a/contracts/dex/CMakeLists.txt
+++ b/contracts/dex/CMakeLists.txt
@@ -1,17 +1,13 @@
-include(ExternalProject)
-# if no cdt root is given use default path
-if(EOSIO_CDT_ROOT STREQUAL "" OR NOT EOSIO_CDT_ROOT)
-   find_package(eosio.cdt)
-endif()
+add_contract(dex dex ${CMAKE_CURRENT_SOURCE_DIR}/src/dex.cpp)
 
-ExternalProject_Add(
-   dex_project
-   SOURCE_DIR ${CMAKE_SOURCE_DIR}/src
-   BINARY_DIR ${CMAKE_BINARY_DIR}/dex
-   CMAKE_ARGS -DCMAKE_TOOLCHAIN_FILE=${EOSIO_CDT_ROOT}/lib/cmake/eosio.cdt/EosioWasmToolchain.cmake
-   UPDATE_COMMAND ""
-   PATCH_COMMAND ""
-   TEST_COMMAND ""
-   INSTALL_COMMAND ""
-   BUILD_ALWAYS 1
-)
+target_include_directories(dex
+   PUBLIC
+   ${CMAKE_CURRENT_SOURCE_DIR}/include)
+
+set_target_properties(dex
+   PROPERTIES
+   RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}")
+
+configure_file( ${CMAKE_CURRENT_SOURCE_DIR}/ricardian/dex.contracts.md.in ${CMAKE_CURRENT_BINARY_DIR}/ricardian/dex.contracts.md @ONLY )
+
+target_compile_options( dex PUBLIC -R${CMAKE_CURRENT_SOURCE_DIR}/ricardian -R${CMAKE_CURRENT_BINARY_DIR}/ricardian )
