--- a/tests/contracts.hpp.in
+++ b/tests/contracts.hpp.in
@@ -15,6 +15,9 @@ struct contracts {
    static std::vector<uint8_t> bios_wasm() { return read_wasm("${CMAKE_BINARY_DIR}/../contracts/eosio.bios/eosio.bios.wasm"); }
    static std::vector<char>    bios_abi() { return read_abi("${CMAKE_BINARY_DIR}/../contracts/eosio.bios/eosio.bios.abi"); }
 
+   static std::vector<uint8_t> dex_wasm() { return read_wasm("${CMAKE_BINARY_DIR}/../contracts/dex/dex.wasm"); }
+   static std::vector<char>    dex_abi() { return read_abi("${CMAKE_BINARY_DIR}/../contracts/dex/dex.abi"); }
+
    struct util {
       static std::vector<uint8_t> reject_all_wasm() { return read_wasm("${CMAKE_SOURCE_DIR}/test_contracts/reject_all.wasm"); }
       static std::vector<uint8_t> exchange_wasm() { return read_wasm("${CMAKE_SOURCE_DIR}/test_contracts/exchange.wasm"); }
